--- a/src/CategoryList/CategoryList.module.css
+++ b/src/CategoryList/CategoryList.module.css
@@ -1,6 +1,6 @@
 .categoryContainer {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(3, 1fr);
     column-gap: 2.5rem;
     row-gap: 1.5rem;
     padding: 5rem 0rem 3rem 0rem;
