--- a/src/CategoryListItem/CategoryListItem.module.css
+++ b/src/CategoryListItem/CategoryListItem.module.css
@@ -7,12 +7,9 @@
     font-family: Arial, Helvetica, sans-serif;
     justify-content: space-between;
     width: 20rem;
+    height: 18rem;
 }
 
-.link {
-    text-decoration: none;
-    color:black;
-}
 
 .imageBlock {
     height: 14rem;
@@ -33,7 +30,6 @@
     font-weight: 700;
     text-decoration: none;
     color: black;
-    text-transform: capitalize;
     font-family: 'Raleway', serif;
 }
 
