--- a/src/CourseList/CourseList.module.css
+++ b/src/CourseList/CourseList.module.css
@@ -6,11 +6,12 @@
 }
 
 .container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    height: 100%;
-
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 2.5rem;
+    row-gap: 1.5rem;
+    padding: 5rem 0rem 3rem 0rem;
+    list-style-type: none;
 }
 .block {
     height: 100px;
@@ -44,20 +45,14 @@
 }
 
 
-@media screen and (min-width: 700px) {
-    .backBtn {
-        width: 2rem;
-        height: 2rem;
-    }
-    .headLine {
-        font-size: 3rem;
-
+@media screen and (max-width: 1200px) {
+    .container{
+        grid-template-columns: repeat(2, 1fr);
     }
   }
 
-@media screen and (min-width: 1150px) {
-    .backBtn {
-        width: 2.5rem;
-        height: 2.5rem;
+@media screen and (max-width: 800px) {
+    .container{
+        grid-template-columns: repeat(1, 1fr);
     }
 }
