--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -1,5 +1,14 @@
+.footer{
+    
+}
 .links{
     flex:1;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    
+}
+.link{
+    margin-left: 50px;
+    margin-right: 50px;
+    color:#17488D;
 }
