--- a/src/CategoryList/CategoryList.module.css
+++ b/src/CategoryList/CategoryList.module.css
@@ -1,16 +1,19 @@
 .categoryContainer {
-    
+  margin-top: 140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-
 @media screen and (min-width: 700px) {
-    .categoryContainer {
-      grid-template-columns: repeat(2, 1fr);
-    }
+  .categoryContainer {
+    grid-template-columns: repeat(2, 1fr);
   }
+}
 
 @media screen and (min-width: 1150px) {
-    .categoryContainer {
-        grid-template-columns: repeat(3, 1fr);
-    }
+  .categoryContainer {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
