--- a/src/CourseList/CourseList.module.css
+++ b/src/CourseList/CourseList.module.css
@@ -1,30 +1,29 @@
 .section {
-    
 }
 
 .container {
-    
+  margin-top: 70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 .block {
-    
 }
 
 .headLineContainer {
-    
 }
 .headLine {
-    
 }
 
-
 @media screen and (max-width: 1200px) {
-    .container{
-        grid-template-columns: repeat(2, 1fr);
-    }
+  .container {
+    grid-template-columns: repeat(2, 1fr);
   }
+}
 
 @media screen and (max-width: 800px) {
-    .container{
-        grid-template-columns: repeat(1, 1fr);
-    }
+  .container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
