--- a/src/CourseListItem/CourseListItem.module.css
+++ b/src/CourseListItem/CourseListItem.module.css
@@ -1,40 +1,39 @@
 .course {
-    
+  width: 80%;
 }
 
 .link {
-    
 }
 
 .imageBlock {
-    
+  width: 100%;
+  height: 8rem;
 }
 
 .image {
-    border-radius: 10px;
-    width: auto; 
-    height: auto;
-    max-width: 100%;
-    max-height: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .courseInfoBlock {
-    
 }
 
 .title {
-    
-
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 1.5rem;
+  margin-top: 8px;
+  color: black;
 }
 
 @media screen and (min-width: 500px) {
-    .product {
-        width: 25rem;
-    }
+  .product {
+    width: 25rem;
+  }
 }
 
-@media screen and (min-width: 700px) and (max-width:900px) {
-    .product {
-        width: 20rem;
-    }
+@media screen and (min-width: 700px) and (max-width: 900px) {
+  .product {
+    width: 20rem;
+  }
 }
