--- a/src/CategoryListItem/CategoryListItem.module.css
+++ b/src/CategoryListItem/CategoryListItem.module.css
@@ -17,18 +17,24 @@ li {
 }
 
 .title {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1.5rem;
   margin-top: 8px;
   color: black;
 }
 
-@media screen and (min-width: 500px) {
-  .category {
+@media screen and (min-width:600px){
+  .imageBlock {
+    height: 4rem;
   }
 }
-
-@media screen and (min-width: 700px) and (max-width: 900px) {
-  .category {
+@media screen and (min-width:900px){
+  .imageBlock {
+    height: 6rem;
+  }
+}
+@media screen and (min-width:1200px){
+  .imageBlock {
+    height: 8rem;
   }
 }
