--- a/src/AboutUs/AboutUs.module.css
+++ b/src/AboutUs/AboutUs.module.css
@@ -6,3 +6,15 @@
     padding-bottom: 3rem;
     background-color: rgb(229, 231, 233);
 }
+.content{
+    font-family: 'Roboto', sans-serif;
+}
+@media screen and (min-width:600px){
+
+}
+@media screen and (min-width:900px){
+    
+}
+@media screen and (min-width:1200px){
+    
+}
