--- a/src/CategoryList/CategoryList.module.css
+++ b/src/CategoryList/CategoryList.module.css
@@ -1,9 +1,14 @@
-.categoryContainer {
-  margin-top: 140px;
+.section{
+  background-color: rgb(229, 231, 233);
+  margin-top: 70px;
+}
+.container {
+  margin-top: 70px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  
 }
 
 @media screen and (min-width: 700px) {
