--- a/src/ContactUs/ContactUs.module.css
+++ b/src/ContactUs/ContactUs.module.css
@@ -1,3 +1,7 @@
 .section {
-    
+    padding-top: 70px;
+    background-color: rgb(229, 231, 233);
+}
+.label{
+    font-family: 'Roboto', sans-serif;
 }
