--- a/src/CourseList/CourseList.module.css
+++ b/src/CourseList/CourseList.module.css
@@ -1,29 +1,13 @@
 .section {
+  background-color: rgb(229, 231, 233);
+  margin-top: 70px;
 }
 
 .container {
-  margin-top: 70px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-}
-.block {
-}
-
-.headLineContainer {
-}
-.headLine {
+  margin-top: 70px;
 }
 
-@media screen and (max-width: 1200px) {
-  .container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .container {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
