--- a/src/Home/Home.module.css
+++ b/src/Home/Home.module.css
@@ -1,19 +1,3 @@
 .section {
-    margin-top:80px;
-}
-
-.container {
-    
-
-}
-.block {
-    
-}
-
-.headLineContainer {
-    
-}
-
-.headLine {
-    
+    background-color: rgb(229, 231, 233);
 }
