--- a/src/CategoryList/CategoryList.module.css
+++ b/src/CategoryList/CategoryList.module.css
@@ -4,21 +4,10 @@
 }
 .container {
   margin-top: 70px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  display: grid;
+  row-gap: 10px;
+  grid-template-columns: repeat(1, 1fr);
+  justify-items: center;
   
 }
 
-@media screen and (min-width: 700px) {
-  .categoryContainer {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (min-width: 1150px) {
-  .categoryContainer {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
